# ChangeLog for app-office/openoffice
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.459 2009/05/01 09:10:55 suka Exp $

*openoffice-3.1.0_beta7 (01 May 2009)

  01 May 2009; Andreas Proschofsky <suka@gentoo.org>
  -openoffice-3.1.0_beta6.ebuild, +openoffice-3.1.0_beta7.ebuild,
  -files/gentoo-3.1.0_beta6.diff, +files/gentoo-3.1.0_beta7.diff:
  Newer beta-release for OOo 3.1

  25 Apr 2009; Brent Baude <ranger@gentoo.org> openoffice-3.0.1.ebuild:
  Marking openoffice-3.0.1 ~ppc64 for bug 244467

  25 Apr 2009; Andreas Proschofsky <suka@gentoo.org> openoffice-3.0.0,
  openoffice-3.0.1:
  Also fix older releases...

  25 Apr 2009; Andreas Proschofsky <suka@gentoo.org> openoffice-3.1.0_beta6:
  Add missing dependency on libXrandr, bug #266331 and fix pax check, bug
  #258051

*openoffice-3.1.0_beta6 (25 Apr 2009)

  25 Apr 2009; Andreas Proschofsky <suka@gentoo.org>
  -files/gentoo-3.1.0_beta5.diff, +files/gentoo-3.1.0_beta6.diff,
  -openoffice-3.1.0_beta5.ebuild, +openoffice-3.1.0_beta6.ebuild:
  Bump to newer beta release, this also fixes the gconf-check, see bug
  #266099

*openoffice-3.1.0_beta5 (20 Apr 2009)

  20 Apr 2009; Andreas Proschofsky <suka@gentoo.org>
  -files/gentoo-3.1.0_beta4.diff, +files/gentoo-3.1.0_beta5.diff,
  -openoffice-3.1.0_beta4.ebuild, +openoffice-3.1.0_beta5.ebuild:
  Bump to newer beta release for OOo 3.1

*openoffice-3.1.0_beta4 (11 Apr 2009)

  11 Apr 2009; Andreas Proschofsky <suka@gentoo.org>
  +files/gentoo-3.1.0_beta4.diff, +files/base64.diff,
  -files/gentoo-3.1.0_beta3.diff, -openoffice-3.1.0_beta3.ebuild,
  +openoffice-3.1.0_beta4.ebuild:
  Bump to newer beta version of OOo 3.1. Also raise icu dependency, fix java
  class registration and bash completion.

*openoffice-3.1.0_beta3 (08 Apr 2009)

  08 Apr 2009; Andreas Proschofsky <suka@gentoo.org>
  +files/gentoo-3.1.0_beta3.diff, +openoffice-3.1.0_beta3.ebuild: