@@ -65,7 +65,7 @@ DIST ooo310-m11-ure.tar.bz2 5160732 RMD160 fd419b3a6a77dac2d95bc55afba5591bed093
 DIST ooo310-m11-writer.tar.bz2 8955758 RMD160 876e1ecbd0bf8e6dbf9eaa95155868e44c33823f SHA1 fc37627f0a8aab578a64818f713ac87a838c4709 SHA256 093f42b6f102f3f9c7f934bdc071680fa50487628b8107aa335f623f8a770694
 DIST scsolver.2008-10-30.tar.bz2 230572 RMD160 2176fd8207cce2e2db56c888849e766eedfb1a63 SHA1 7ad9c3396c3b1b9ac63274eb53818ba2d0a9f70c SHA256 865ac491bfbc7d4cc66b51fff78f3962a0a91efba1a8b5cc0bf5cf36be60e193
 DIST unowinreg.dll 6144 RMD160 9e2a2789a96842a2aec747a62dee3db3e8370761 SHA1 712720da502d36175cd7aa05cb1862ee0330638c SHA256 f563e522922133db9340b0306711c2d8767cc3481dd9e7d9b0d059906d12653c
-EBUILD openoffice-3.0.1.ebuild 12407 RMD160 25e792d40bb19874e81aa02672c515282df033b1 SHA1 3296707740201ede533b960e3e153c4b4c18662c SHA256 d45fce83a820a59575f14134f5a6716535d9e402a3ef830f477b238974442326
-EBUILD openoffice-3.1.0_beta7.ebuild 12908 RMD160 2a42bf6734f3eaba1eb340408d107895eaddef40 SHA1 d2cdaf8f799c44b5111b765a90e9cdb2ee5693aa SHA256 f201a13290ab01eb01564862c2169387a7a81457ba011c89750f8d398f4e81cb
-MISC ChangeLog 95889 RMD160 6aa4a50fb42f88dbc2c9c186060dde91dd929693 SHA1 c2c70934595a8405df490931f795358fc74a4de2 SHA256 5a85a02ab4e684b2ca92c922bb61581845f7493b53a5d3a5b2bbaff6533b1610
+EBUILD openoffice-3.0.1.ebuild 12405 RMD160 4b99445d23f5d0deb392ed3bc5a2106f9a50e500 SHA1 31fe71265160ab979466a6178972426b1c3283e3 SHA256 3b221658395c2098b8f4bd08a50e73e5c46080b887734de643816a86ade27ab4
+EBUILD openoffice-3.1.0_beta7.ebuild 12907 RMD160 d4acb842168fca51ef0abe00a09eefc977feefb2 SHA1 35a2aa15ab7cf0fb0a5e7a963675c5153d0cbb7c SHA256 96ce9b0090ed808b5b12f737afbf58d58d514232744a318da7e878b8756d2201
+MISC ChangeLog 96166 RMD160 ba76b7ee231d1b8bf58dd5df98f3f1811b47f08f SHA1 2c8ad9484ab599f97451848223290eea01348403 SHA256 42427af6c71fcfa58c985ba83174971c6956526fc4a7e723fee071844eef1ee7
 MISC metadata.xml 704 RMD160 c65911c6a5496c96e51d40848179c3321fb5fafd SHA1 25c8229286d330cdf48dbca4847594359a35820f SHA256 c60a22487a895dd589228b2bd964c2481067bbdabd4d91c49bb38927482abd78
