@@ -1,6 +1,12 @@
 # ChangeLog for app-office/openoffice
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.459 2009/05/01 09:10:55 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice/ChangeLog,v 1.460 2009/05/03 20:15:36 loki_val Exp $
+
+  03 May 2009; Peter Alfredsen <loki_val@gentoo.org>
+  openoffice-3.0.0.ebuild, openoffice-3.0.1.ebuild,
+  openoffice-3.1.0_beta7.ebuild:
+  Update deps w.r.t. bug 257313. Novell seems disinclined to fix this bug in
+  a timely manner, so we'll just have to work-around it.
 
 *openoffice-3.1.0_beta7 (01 May 2009)
 
